[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/GUI/game_logo_double_shadow.png" type="Texture" id=3]
[ext_resource path="res://GUI/Settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Credits.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0, 0.0627451, 0.627451 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MenuControl/MenuPanel:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.36 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuControl/MenuPanel:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.18 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuControl/MenuPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "menu_appear"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MenuControl/MenuPanel:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -0.36, 0.05 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuControl/MenuPanel:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -0.18, 0.23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuControl/MenuPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="MenuControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="DarkBackgroundPanel" type="Panel" parent="MenuControl"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MenuPanel" type="Panel" parent="MenuControl"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.36
anchor_right = -0.18
anchor_bottom = 1.0

[node name="GameLogo" type="TextureRect" parent="MenuControl/MenuPanel"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.35
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuControl/MenuPanel"]
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.85
custom_constants/separation = 24

[node name="ResumeButton" type="Button" parent="MenuControl/MenuPanel/ButtonsContainer"]
margin_right = 147.0
margin_bottom = 39.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Resume"
clip_text = true

[node name="SettingsButton" type="Button" parent="MenuControl/MenuPanel/ButtonsContainer"]
margin_top = 63.0
margin_right = 147.0
margin_bottom = 102.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Settings"
clip_text = true

[node name="CreditsButton" type="Button" parent="MenuControl/MenuPanel/ButtonsContainer"]
margin_top = 126.0
margin_right = 147.0
margin_bottom = 165.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Credits"
clip_text = true

[node name="MainMenuButton" type="Button" parent="MenuControl/MenuPanel/ButtonsContainer"]
margin_top = 189.0
margin_right = 147.0
margin_bottom = 228.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Main Menu"
clip_text = true

[node name="VersionLabel" type="Label" parent="MenuControl/MenuPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
margin_bottom = -20.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 20, 10 )
text = "v1.0"
align = 1
valign = 1

[node name="Settings" parent="MenuControl" instance=ExtResource( 4 )]
visible = false

[node name="Credits" parent="MenuControl" instance=ExtResource( 5 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/menu_appear = SubResource( 3 )
